# seek-and-go-robot

./: .gitignore  Dockerfile  README.md  entrypoint.sh  run_container.sh  run_tests.sh
github/workflows/: ci.yml
src/slam/: CMakeLists.txt  package.xml
src/slam/config/: slam_toolbox.yaml
src/slam/include/: simple_slam.hpp  simple_slam_node.h  simple_slam_node.hpp
src/slam/launch/: lidar_slam.launch.py  simple_slam.launch.py
src/slam/scripts/: save_map_on_demand.py
src/slam/src/: simple_slam.cpp  simple_slam_node.cpp
src/slam/test/: test_icp.cpp  test_occupancy_grid.cpp  test_slam_node.cpp
src/teleoperate/: CMakeLists.txt  package.xml
src/teleoperate/launch/: teleop.launch.py
src/warehouse_robot/: CMakeLists.txt  package.xml
src/warehouse_robot/launch/: spawn.launch.py
src/warehouse_robot/models/urdf/: warehouse_robot.gazebo  warehouse_robot.xacro
src/warehouse_robot/src/: warehouse_bridge.cpp  warehouse_scan_to_pointcloud.cpp
src/warehouse_robot/worlds/: warehouse.world
