<?xml version="1.0"?>
<package format="3">
  <name>slam</name>
  <version>0.0.1</version>
  <description>2D LiDAR SLAM package integrating slam_toolbox and auto map saving.</description>

  <maintainer email="vidhant@example.com">Vidhant Sharma</maintainer>
  <license>MIT</license>

  <!-- Build dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime and build dependencies -->
  <depend>rclpy</depend>
  <depend>slam_toolbox</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>

  <!-- For launch and parameter management -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
